@@ -101,3 +101,26 @@ input {
 .addNew a:Hover {
     text-decoration: none;
 }
+
+
+/* custom input file */
+.SI-FILES-STYLIZED label.custom
+{
+    width: 79px;
+    height: 22px;
+    background: url(browse.gif) 0 0 no-repeat;
+
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.SI-FILES-STYLIZED label.custom input.file
+{
+    position: relative;
+    height: 100%;
+    width: auto;
+    opacity: 0;
+    -moz-opacity: 0;
+    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+}
